# spatial-effects

./: LICENSE  README.md  project_info.json  pyproject.toml  setup.py
examples/: body.py
spatial_effects/: __init__.py  axis_angle.py  common.py  conversions.py  distances_and_means.py  frame_tree.py  quaternion.py  rotation.py  se2.py  se3.py  so2.py  so3.py  transform_tree.py
spatial_effects/tests/: test_averages.py  test_conversions.py  test_distances.py  test_frame_tree.py  test_quaternion.py  test_rotations.py  test_se2.py  test_se3.py  test_transforms.py
